2001-08-27  Daniel Jacobowitz  <drow@mvista.com>

	* elf32-i386.c (elf_i386_grok_prstatus): New function.
	(elf_i386_grok_psinfo): New function.
	(elf_backend_grok_prstatus): Define.
	(elf_backend_grok_psinfo): Likewise.
	* elf32-ppc.c (ppc_elf_grok_prstatus): New function.
	(ppc_elf_grok_psinfo): New function.
	(elf_backend_grok_prstatus): Define.
	(elf_backend_grok_psinfo): Likewise.
	* elf32-sh-lin.c (elf32_shlin_grok_prstatus): New function.
	(elf32_shlin_grok_psinfo): New function.
	(elf_backend_grok_prstatus): Define.
	(elf_backend_grok_psinfo): Likewise.
	* elfarm-nabi.c (elf32_arm_nabi_grok_prstatus): New function.
	(elf32_arm_nabi_grok_psinfo): New function.
	(elf_backend_grok_prstatus): Define.
	(elf_backend_grok_psinfo): Likewise.

2001-08-27  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (mips_elf_create_dynamic_relocation): Add more
	sanity check.
	(mips_elf_calculate_relocation): Create dynamic relocation for
	symbols with weak definition or the ELF_LINK_HASH_DEF_REGULAR
	bit is not set.

2001-08-27  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (_bfd_mips_elf_hide_symbol): Add prototype.
	(_bfd_mips_elf_copy_indirect_symbol): Likewise.
	(_bfd_elf32_mips_grok_prstatus): Likewise.
	(_bfd_elf32_mips_grok_psinfo): Likewise.
	(_bfd_mips_elf_hide_symbol): Make it static and cast to
	`struct mips_elf_link_hash_entry *'.
	(_bfd_mips_elf_copy_indirect_symbol): Make it static.

2001-08-27  Nick Clifton  <nickc@cambridge.redhat.com>

	* mipsbsd.c: Add missing prototypes.
	* hp300hpux.c: Add missing prototypes.
	* i386aout.c: Add missing prototypes.
	* i386lynx.c: Add missing prototypes.
	* i386mach3.c: Add missing prototypes.
	* i386msdos.c: Add missing prototypes.
	* i386os9k.c: Add missing prototypes.

2001-08-27  Linus Nordberg  <linus@swox.se>
	    Torbjorn Granlund  <tege@swox.com>
	    Staffan Ulfberg  <staffanu@swox.se>
	    Alan Modra  <amodra@bigpond.net.au>

	* config.bfd: Add powerpc64 target.  Add powerpc64 vectors to
	targ64_selvecs for 32 bit powerpc targets.