@@ -1,5 +1,12 @@
 2001-08-27  Daniel Jacobowitz  <drow@mvista.com>
 
+	* elf32-i386.c: Add missing prototypes.
+	* elf32-ppc.c: Likewise.
+	* elf32-sh-lin.c: Likewise.
+	* elfarm-nabi.c: Likewise.
+
+2001-08-27  Daniel Jacobowitz  <drow@mvista.com>
+
 	* elf32-i386.c (elf_i386_grok_prstatus): New function.
 	(elf_i386_grok_psinfo): New function.
 	(elf_backend_grok_prstatus): Define.
